[package]
name = "spidertaire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "*", default-features = false, features = [ "animation", "bevy_asset", "bevy_scene", "bevy_winit", "render", "png", "hdr", "x11", "filesystem_watcher" ] }
rand = { version = "*" }

